프로젝트 6일차 1. 레시피 타입에 맞춰서 DTO 2종 추가 2. 이미지 분석과 레시피 생성 서비스를 파이썬 API개수에 맞춰서 세분화 3. 프론트에서 컨트롤러로 타입을 받아서, 해당하는 서비스를 실행하도록 설정(기존 Type 변수 제거) 4. 서비스에 python Json파일을 받을 수 있도록 해주는 PythonResponseWrapper와 generic타입 변수, ParameterizedTypeReference 클레스 사용